// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card friendsName should match the snapshot when a friends name is provided 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    favorite={Object {}}
    friendName="coda"
    type="friends"
    updateFavorites={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="game-info"
          id="game-title"
>
          <h3>
                    coda played:
          </h3>
          <h3 />
          <img
                    alt="game-icon"
                    src={undefined}
          />
          <img
                    alt="delete-game"
                    id="delete"
                    onClick={[Function]}
                    src="error.svg"
          />
          <img
                    alt="add-game"
                    id="add"
                    onClick={[Function]}
                    src="plus.svg"
          />
</div>,
        <div
          className="game-info"
          id="game-description"
>
          <p />
</div>,
        <div
          className="game-info"
          id="review-cont"
>
          <h3>
                    <span>
                              0
                    </span>
                    /5
          </h3>
          <p
                    contenteditable="false"
                    onBlur={[Function]}
          />
</div>,
      ],
      "className": "Card friends",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3>
              coda played:
</h3>,
            <h3 />,
            <img
              alt="game-icon"
              src={undefined}
/>,
            <img
              alt="delete-game"
              id="delete"
              onClick={[Function]}
              src="error.svg"
/>,
            <img
              alt="add-game"
              id="add"
              onClick={[Function]}
              src="plus.svg"
/>,
          ],
          "className": "game-info",
          "id": "game-title",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "coda played:",
            },
            "ref": null,
            "rendered": "coda played:",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "game-icon",
              "src": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "delete-game",
              "id": "delete",
              "onClick": [Function],
              "src": "error.svg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "add-game",
              "id": "add",
              "onClick": [Function],
              "src": "plus.svg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <p />,
          "className": "game-info",
          "id": "game-description",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "p",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3>
              <span>
                            0
              </span>
              /5
</h3>,
            <p
              contenteditable="false"
              onBlur={[Function]}
/>,
          ],
          "className": "game-info",
          "id": "review-cont",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span>
                  0
</span>,
                "/5",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "0",
                },
                "ref": null,
                "rendered": "0",
                "type": "span",
              },
              "/5",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "contenteditable": "false",
              "onBlur": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="game-info"
            id="game-title"
>
            <h3>
                        coda played:
            </h3>
            <h3 />
            <img
                        alt="game-icon"
                        src={undefined}
            />
            <img
                        alt="delete-game"
                        id="delete"
                        onClick={[Function]}
                        src="error.svg"
            />
            <img
                        alt="add-game"
                        id="add"
                        onClick={[Function]}
                        src="plus.svg"
            />
</div>,
          <div
            className="game-info"
            id="game-description"
>
            <p />
</div>,
          <div
            className="game-info"
            id="review-cont"
>
            <h3>
                        <span>
                                    0
                        </span>
                        /5
            </h3>
            <p
                        contenteditable="false"
                        onBlur={[Function]}
            />
</div>,
        ],
        "className": "Card friends",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                coda played:
</h3>,
              <h3 />,
              <img
                alt="game-icon"
                src={undefined}
/>,
              <img
                alt="delete-game"
                id="delete"
                onClick={[Function]}
                src="error.svg"
/>,
              <img
                alt="add-game"
                id="add"
                onClick={[Function]}
                src="plus.svg"
/>,
            ],
            "className": "game-info",
            "id": "game-title",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "coda played:",
              },
              "ref": null,
              "rendered": "coda played:",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "game-icon",
                "src": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "delete-game",
                "id": "delete",
                "onClick": [Function],
                "src": "error.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "add-game",
                "id": "add",
                "onClick": [Function],
                "src": "plus.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <p />,
            "className": "game-info",
            "id": "game-description",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "p",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                <span>
                                0
                </span>
                /5
</h3>,
              <p
                contenteditable="false"
                onBlur={[Function]}
/>,
            ],
            "className": "game-info",
            "id": "review-cont",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span>
                    0
</span>,
                  "/5",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "0",
                  },
                  "ref": null,
                  "rendered": "0",
                  "type": "span",
                },
                "/5",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "contenteditable": "false",
                "onBlur": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    favorite={Object {}}
    friendName="friend"
    type="games"
    updateFavorites={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="game-info"
          id="game-title"
>
          <h3 />
          <h3 />
          <img
                    alt="game-icon"
                    src={undefined}
          />
          <img
                    alt="delete-game"
                    id="delete"
                    onClick={[Function]}
                    src="error.svg"
          />
          <img
                    alt="add-game"
                    id="add"
                    onClick={[Function]}
                    src="plus.svg"
          />
</div>,
        <div
          className="game-info"
          id="game-description"
>
          <p />
</div>,
        <div
          className="game-info"
          id="review-cont"
>
          <h3>
                    <span>
                              0
                    </span>
                    /5
          </h3>
          <p
                    contenteditable="true"
                    onBlur={[Function]}
          />
</div>,
      ],
      "className": "Card games",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3 />,
            <h3 />,
            <img
              alt="game-icon"
              src={undefined}
/>,
            <img
              alt="delete-game"
              id="delete"
              onClick={[Function]}
              src="error.svg"
/>,
            <img
              alt="add-game"
              id="add"
              onClick={[Function]}
              src="plus.svg"
/>,
          ],
          "className": "game-info",
          "id": "game-title",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": null,
            },
            "ref": null,
            "rendered": null,
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "game-icon",
              "src": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "delete-game",
              "id": "delete",
              "onClick": [Function],
              "src": "error.svg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "add-game",
              "id": "add",
              "onClick": [Function],
              "src": "plus.svg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <p />,
          "className": "game-info",
          "id": "game-description",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "p",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3>
              <span>
                            0
              </span>
              /5
</h3>,
            <p
              contenteditable="true"
              onBlur={[Function]}
/>,
          ],
          "className": "game-info",
          "id": "review-cont",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span>
                  0
</span>,
                "/5",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "0",
                },
                "ref": null,
                "rendered": "0",
                "type": "span",
              },
              "/5",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "contenteditable": "true",
              "onBlur": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="game-info"
            id="game-title"
>
            <h3 />
            <h3 />
            <img
                        alt="game-icon"
                        src={undefined}
            />
            <img
                        alt="delete-game"
                        id="delete"
                        onClick={[Function]}
                        src="error.svg"
            />
            <img
                        alt="add-game"
                        id="add"
                        onClick={[Function]}
                        src="plus.svg"
            />
</div>,
          <div
            className="game-info"
            id="game-description"
>
            <p />
</div>,
          <div
            className="game-info"
            id="review-cont"
>
            <h3>
                        <span>
                                    0
                        </span>
                        /5
            </h3>
            <p
                        contenteditable="true"
                        onBlur={[Function]}
            />
</div>,
        ],
        "className": "Card games",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3 />,
              <h3 />,
              <img
                alt="game-icon"
                src={undefined}
/>,
              <img
                alt="delete-game"
                id="delete"
                onClick={[Function]}
                src="error.svg"
/>,
              <img
                alt="add-game"
                id="add"
                onClick={[Function]}
                src="plus.svg"
/>,
            ],
            "className": "game-info",
            "id": "game-title",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": null,
              },
              "ref": null,
              "rendered": null,
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "game-icon",
                "src": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "delete-game",
                "id": "delete",
                "onClick": [Function],
                "src": "error.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "add-game",
                "id": "add",
                "onClick": [Function],
                "src": "plus.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <p />,
            "className": "game-info",
            "id": "game-description",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "p",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                <span>
                                0
                </span>
                /5
</h3>,
              <p
                contenteditable="true"
                onBlur={[Function]}
/>,
            ],
            "className": "game-info",
            "id": "review-cont",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span>
                    0
</span>,
                  "/5",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "0",
                  },
                  "ref": null,
                  "rendered": "0",
                  "type": "span",
                },
                "/5",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "contenteditable": "true",
                "onBlur": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
